--- a/css/xingzhengindex.css
+++ b/css/xingzhengindex.css
@@ -5,15 +5,16 @@
 #zhuti{
 	width: 1024px;
 	margin: 0 auto;
+	margin-top: 40px;
 }
 
 #leftmain{
-	background-color: #EDEDED;
+	/*background-color: #EDEDED;*/
 	display: inline-block;
 	vertical-align: top;
 }
 #rightmain{
-	background-color: #EDEDED;
+	/*background-color: #EDEDED;*/
 	width: 233px;
 	height: 1222px;
 	padding-left: 15px;
@@ -31,7 +32,7 @@
 	width: 260px;
 	height: 260px;
 	display: inline-block;
-	background-color: #EDEDED;
+	/*background-color: #EDEDED;*/
 	vertical-align: top;
 }
 
@@ -127,14 +128,68 @@
 	vertical-align: top;
 }
 
-.test{
-	background-color:red ;
-	display: block;
+#listmean{
+	margin-top: 18px;
+}
+
+.mulitxt{
+	/*cursor:pointer;*/
+	transition: all 0.5s ease-out 0s; 
+	-webkit-transition: all 0.5s ease-out 0s;
+	-moz-transition: all 0.5s ease-out 0s;
+	display:inline-block;
+	border:1px solid #e6e6e6;
+	list-style:none;
+	height:28px;
+	line-height:30px;
+	vertical-align:top;
+	margin-right:5px;
+}
+.mulitxtul{
+	-moz-user-select:none; /*火狐*/
+    -webkit-user-select:none; /*webkit浏览器*/
+    -ms-user-select:none; /*IE10*/
+    -khtml-user-select:none; /*早期浏览器*/
+     user-select:none;
+}
+
+.mulitxtul li:hover{/**这里是有问题还没有解决的地方*/
+	color: #ffffff;
+	cursor:pointer;
+}
+
+.guanggao2{
+	width: 100%;
+	height: 91px;
+	background-image: url(../img/gg/images/dujins_03.png);
+	margin-top: 25px;
+}
+/**-----------------------------------------------*/
+
+
+#jiangexian{
+	width: 1px;
+	height: 1680px;
+	background-color: #c4c3c3;
+	display: inline-block;
+}
+
+/**-----------行程规划---------------*/
+#guihuaform{
+	width: 200px;
+	height: 158px;
+	margin-left: 10px;
+	margin-top: 10px;
 	
 }
 
-
-
+#guihuaform div{
+	margin-top: 20px;
+}
+#guihuaform img{
+	width:208px ;
+	height: 147px;
+}
 
 
 
